--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Kendimi geliştirme serüvenimde şimdi yazılım alanına yöneldim ve bu da il
 
 <h3> İlgi Alanlarım</h3>
 
-<pre> (Listedeki öğeler hakkında bilgi almak için lütfen resim ya da yazıların üzerine tıklayın.)</fieldset></pre>
+<pre> (Listedeki öğeler hakkında bilgi almak için lütfen resim ya da yazıların üzerine tıklayın.)</pre>
 
 <ol>
     <li>Filmler
